--- a/ProjetoFullStack/src/App.css
+++ b/ProjetoFullStack/src/App.css
@@ -44,7 +44,13 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #fafafa;
+  background-color: #f9f3e0;
   color: #333;
   text-align: center;
+}
+
+.popular {
+  padding-left: 1.5em;
+  margin-bottom: -1em;
+  text-align: left;
 }
