--- a/ProjetoFullStack/src/components/RecipeList.css
+++ b/ProjetoFullStack/src/components/RecipeList.css
@@ -12,6 +12,7 @@
     overflow: hidden;
     text-align: left;
     transition: transform 0.2s ease;
+    background-color: #b2daf5;
   }
   
   .recipe-card:hover {
@@ -25,9 +26,10 @@
   }
   
   .recipe-card h3 {
-    margin: 0.75rem 1rem 0 1rem;
+    margin: 0.5rem 1rem 0.75rem 1rem;
     font-size: 1.2rem;
     color: #333;
+    text-align: center;
   }
   
   .recipe-card p {
@@ -35,4 +37,3 @@
     font-size: 0.9rem;
     color: #555;
   }
-  
